tests/out/error/fun/param_redefine.in.bt
fun foo(p string) {
	p := 123
}

fun bar(a i32, a bool) {}
